# Ane-stent

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  input.txt  input.xlsx  inputInflating.txt  inputkAST.txt  inputkLST.txt  inputkVST.txt
capacitaciones/: README.md
capacitaciones/VTK+Bullet+XML/: CMakeLists.txt  miPrimerEjemploEsUnCono.cxx
capacitaciones/VTK+Bullet+XML/Ejemplos/: example.vtk
capacitaciones/VTKFiles/: ReadUnknownTypeXMLFile.cxx  holamundo.cpp  uvSphere.vtk
capacitaciones/btvtk/: CMakeLists.txt
capacitaciones/btvtk/modelos/: cilindroo.vtk  cuadrado.vtk  cubo.vtk  example.vtp  piso.vtk
capacitaciones/btvtk/src/: main.cpp
capacitaciones/btvtk/src/loaders/: ModelLoader.cpp  ModelLoader.h  SceneBuilder.cpp  SceneBuilder.h
capacitaciones/btvtk/src/scene/: RigidMotionState.cpp  RigidMotionState.h  Scene.cpp  Scene.h  SceneMotionState.cpp  SceneMotionState.h  SceneObject.cpp  SceneObject.h  SceneRigidObject.cpp  SceneRigidObject.h  SceneSoftObject.cpp  SceneSoftObject.h  SoftMotionState.cpp  SoftMotionState.h
capacitaciones/btvtk/src/util/: Converter.cpp  Converter.h  InstanceOf.h  ToString.h
capacitaciones/btvtk/test/: CargaCaras.cpp
capacitaciones/btvtk/test/casos/: vertices.tsv
entregas-semanales/: README.md
iterationsInput/: 0.txt  1.txt  2.txt  3.txt  4.txt
modelos/: bunny.blend  bunny.blend1  bunny.mtl  bunny.stl  bunny.vtk  cilindroRadio.blend  cilindroRadio.blend1  cilindroRadio.mtl  cilindroRadio.stl  cilindroRadio.vtk  cilindroRadio.vtp  icoSphere.vtk  piso.blend  piso.blend1  piso.stl  piso.vtk  uvSphereG.vtk
modelos/cilindros/: rgc.vtk
modelos/cilindros/cylinders/: rgc_01.vtk  rgc_02.vtk  rgc_04.vtk  rgc_05.vtk  rgc_07.vtk  synthetic_rgc_2015_03_13_0000000000.vtk  synthetic_rgc_2015_03_13_0000000001.vtk  synthetic_rgc_2015_03_13_0000000002.vtk  synthetic_rgc_2015_03_13_0000000003.vtk  synthetic_rgc_2015_03_13_0000000004.vtk  synthetic_rgc_2015_03_13_0000000005.vtk  synthetic_rgc_2015_03_13_0000000006.vtk  synthetic_rgc_2015_03_13_0000000007.vtk  synthetic_rgc_2015_03_13_0000000008.vtk  synthetic_rgc_2015_03_13_0000000009.vtk  synthetic_rgc_2015_03_13_0000000010.vtk  synthetic_rgc_2015_03_13_0000000011.vtk  synthetic_rgc_2015_03_13_0000000012.vtk  synthetic_rgc_2015_03_13_0000000013.vtk  synthetic_rgc_2015_03_13_0000000014.vtk  synthetic_rgc_2015_03_13_0000000015.vtk  synthetic_rgc_2015_03_13_0000000016.vtk  synthetic_rgc_2015_03_13_0000000017.vtk  synthetic_rgc_2015_03_13_0000000018.vtk  synthetic_rgc_2015_03_13_0000000019.vtk  synthetic_rgc_2015_03_13_0000000020.vtk  synthetic_rgc_2015_03_13_0000000021.vtk  synthetic_rgc_2015_03_13_0000000022.vtk  synthetic_rgc_2015_03_13_0000000023.vtk  synthetic_rgc_2015_03_13_0000000024.vtk  synthetic_rgc_2015_03_13_0000000025.vtk  synthetic_rgc_2015_03_13_0000000026.vtk  synthetic_rgc_2015_03_13_0000000027.vtk  synthetic_rgc_2015_03_13_0000000028.vtk  synthetic_rgc_2015_03_13_0000000029.vtk  synthetic_rgc_2015_03_13_0000000030.vtk  synthetic_rgc_2015_03_13_0000000031.vtk  synthetic_rgc_2015_03_13_0000000032.vtk  synthetic_rgc_2015_03_13_0000000033.vtk  synthetic_rgc_2015_03_13_0000000034.vtk  (+118 more)
modelos/cilindros/cylinders/1000_no_optimization_no_randomization/: rgc_00.vtk  (+162 more)
src/: README.md  main.cpp
src/loaders/: ModelLoader.cpp  ModelLoader.h
src/scene/: InflatingCylinder.cpp  InflatingCylinder.h  InflatingObject.cpp  InflatingObject.h  RigidMotionState.cpp  RigidMotionState.h  Scene.cpp  Scene.h  SceneRigidObject.cpp  SceneRigidObject.h  SceneSoftObject.cpp  SceneSoftObject.h
src/util/: ToString.h
tasks/: build.sh  run.sh  testIterations.sh
test/: CMakeLists.txt  CargaVertices.cpp
test/casos/: caras.tsv
tiemposPorCuadro/iterations/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tiemposPorCuadro/rigid/: =m	  bunny.vtk.txt  cilindroRadio.vtk.txt  cilindroo.vtk.txt  cuadrado.vtk.txt  cubo.vtk.txt  icoSphere.vtk.txt  piso.vtk.txt  rgc.vtk.txt  uvSphere.vtk.txt  uvSphereG.vtk.txt
tiemposPorCuadro/soft/: bunny.vtk.txt  cilindroRadio.vtk.txt  cilindroo.vtk.txt  cuadrado.vtk.txt  cubo.vtk.txt  icoSphere.vtk.txt  piso.vtk.txt  rgc.vtk.txt  uvSphere.vtk.txt  uvSphereG.vtk.txt
web/: index.html
web/css/: custom.css
web/entregables/: Memoria.docx  Plan de proyecto.docx  SRS.docx
(+647 files in other folders)
